templates/parks-dashboard/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: parks-dashboard
  labels:
    app: parks-dashboard
    app.kubernetes.io/component: parks-dashboard
    app.kubernetes.io/name: parks-dashboard
    app.kubernetes.io/part-of: parks
spec:
  to:
    kind: Service
    name: parks-dashboard
    weight: 100
  port:
    targetPort: 9000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
